<resources>
    <string name="app_name">Turismo</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_maps">Mapas</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_maps_lugares">Lugares Turisticos</string>
    <string name="title_activity_mapa_hoteles">Servicios de Hospedaje</string>
    <string name="title_activity_mapa_restaurantes">Servicios de Alimentación</string>
    <string name="title_activity_descripcion">Lugar Turístico</string>
    <string name="text_direccion">Dirección:</string>
    <string name="label_direccion">Dirección:</string>
    <string name="label_horarios">Horarios:</string>
    <string name="label_horario_no_encontrado">Horario no disponible</string>
    <string name="label_longitud">Longitud:</string>
    <string name="label_latitud">Latitud:</string>
    <string name="label_email">Email:</string>
    <string name="label_pagina_web">Página Web:</string>
    <string name="label_telefono">Teléfono:</string>
    <string name="label_nombre">Nombre:</string>
    <string name="label_insertar_hotel">Insertar Hotel:</string>
    <string name="label_insertar_lugar_turistico">Insertar Lugar Turístico:</string>
    <string name="label_insertar_restaurante">Insertar Restaurante:</string>
    <string name="label_nombre_rest">Nombre:</string>
    <string name="label_direccion_rest">Dirección:</string>
    <string name="label_telefono_rest">Teléfono:</string>
    <string name="label_email_rest">Email:</string>
    <string name="label_latitud_rest">Latitud:</string>
    <string name="label_longitud_rest">Longitud:</string>
    <string name="title_activity_maps_prueba">Map</string>
    <string name="title_activity_login">Iniciar Sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Logearse</string>
    <string name="error_invalid_email">Este email es inválido</string>
    <string name="error_invalid_password">Esta contraseña es muy corta</string>
    <string name="error_incorrect_password">La contraseña es incorreca</string>
    <string name="error_field_required">Este Campo es requerido</string>
    <string name="permission_rationale">"Esta cuenta no cuenta con los permisos necesarios."</string>
    <string name="action_login">Iniciar Sesión</string>
    <string name="action_login_close">Cerrar Sesión</string>
    <string name="label_agregar">Agregar</string>
    <string name="label_tipo">Tipo Lugar:</string>
    <string name="label_tipo_de_turismo">Categoria:</string>
    <string name="label_provincia">Provincia:</string>
    <string name="action_search">Buscar …</string>
    <string name="title_activity_descripcion_hotel">Hotel</string>
    <string name="title_activity_descripcion_restaurante">Restaurante</string>
    <string name="label_eliminar">Eliminar</string>
    <string name="label_editar">Editar</string>
    <string name="label_capturar">Capturar</string>
    <string name="action_edit_profile">Editar perfil</string>
    <string name="action_user_insert">Insertar Usuario</string>
    <string name="label_insertar">Insertar</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_reset_profile">Resetear Firebase</string>
    <string name="buscar_por_provincia">Buscar por Provincia</string>
    <string name="buscar_por_tipo">Buscar por Clasificación del Turismo</string>
    <string name="label_clasificacion_del_turismo_en_cochabamba">Clasificación del Turismo en Cochabamba</string>

    <string name="tipo_etnografia_folklore">Etnografía y Folklore</string>
    <string name="tipo_realizaciones_tecnicas_cientificas">Realizaciones Técnicas y Científicas</string>
    <string name="tipo_sitios_naturales">Sitios Naturales</string>
    <string name="tipo_patrimonio_urbano">Patrimonio Urbano Arquitectónico, Artístico, Museos y Manifestaciones Culturales</string>
    <string name="tipo_acontecimientos_programados">Acontecimientos Programados</string>

    <string name="label_linea">Línea:</string>
    <string name="label_fecha">Fecha:</string>
    <string name="labelName">Nombre:</string>
    <string name="label_rolUser">Tipo Usuario:</string>
    <string name="action_sincronizar">Sincronizar SQLite</string>
    <string name="description_imagen">TODO</string>
    <string name="acontecimiento">Acontecimiento:</string>
    <string name="label_audio_guia">Audio Guia</string>
    <string name="label_trazar_ruta">Trazar Ruta</string>
    <string name="label_descripcion">Descripción:</string>
    <string name="label_actividad">Actividad</string>
    <string name="label_date">Fecha:</string>
    <string name="label_buscar_imagen">Buscar Imagen</string>
    <string name="label_guardar_cambios">Guardar Cambios</string>
</resources>
