<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hga.appturismo.activity.EditarActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical"
            android:paddingBottom="15dp">

            <LinearLayout
                android:id="@+id/editar_layout_tipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="3">

                <TextView
                    android:id="@+id/editar_label_textView_tipo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_tipo"
                    android:textSize="@dimen/size_text_primary" />

                <Spinner
                    android:id="@+id/editar_spinner_tipo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:textSize="@dimen/size_text_primary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editar_layout_subtipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/editar_label_textView_tipoTurismo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="@string/label_tipo_de_turismo"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/size_text_primary" />

                <Spinner
                    android:id="@+id/editar_spinner_subtipo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@array/subtipo_turismo"
                    android:textSize="@dimen/size_text_primary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/editar_layout_provincia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/editar_label_textView_provincia"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_provincia"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/size_text_primary" />

                <Spinner
                    android:id="@+id/editar_spinner_provincia"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@array/provincia"
                    android:textSize="@dimen/size_text_primary" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/black"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editar_layout_nombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editar_txt_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/label_nombre"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/size_text_primary" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editar_layout_descripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editar_txt_descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:textSize="@dimen/size_text_primary"
                    android:hint="@string/label_descripcion"
                    android:textColor="@color/colorPrimaryDark" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editar_layout_actividad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editar_txt_actividad"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:hint="@string/label_actividad"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/size_text_primary" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editar_layout_linea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editar_txt_linea"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/label_linea"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/size_text_primary" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/editar_layout_fecha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/editar_label_fecha"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:text="@string/label_date"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/size_text_primary" />

                <TextView
                    android:id="@+id/editar_txt_fecha"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_label_top_bottom"
                    android:layout_marginBottom="@dimen/margin_label_top_bottom"
                    android:layout_weight="2"
                    android:onClick="showDatePickerDialog"
                    android:textSize="@dimen/size_text_primary" />
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editar_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editar_txt_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/label_email"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/size_text_primary" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editar_layout_direccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editar_txt_direccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/label_direccion"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/size_text_primary" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editar_layout_pagina_web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editar_txt_paginaweb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:hint="@string/label_pagina_web"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/size_text_primary" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editar_layout_telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editar_txt_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/label_telefono"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/size_text_primary" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editar_layout_horario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editar_txt_horario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/label_horarios"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/size_text_primary" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editar_layout_latitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editar_txt_latitud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/label_latitud"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/size_text_primary" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/editar_layout_longitud"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editar_txt_longitud"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/label_longitud"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/size_text_primary" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/editar_layout_imagen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_label_top_bottom"
                    android:layout_marginBottom="@dimen/margin_label_top_bottom"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/editar_btn_imagen_capturar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:hint="@string/label_capturar"
                        android:onClick="goCameraActivity"
                        tools:targetApi="lollipop" />

                    <Button
                        android:id="@+id/editar_btn_imagen_buscar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorPrimary"
                        android:hint="@string/label_buscar_imagen"
                        android:onClick="goGaleryActivity"
                        tools:targetApi="lollipop" />

                    <TextView
                        android:id="@+id/editar_ruta_imagen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=""
                        android:textSize="@dimen/size_text_primary"
                        android:visibility="gone" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/editar_insertar_imagen"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="@dimen/margin_label_top_bottom"
                    android:layout_marginBottom="@dimen/margin_label_top_bottom"
                    android:layout_weight="2"
                    android:src="@drawable/img_fondo" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/editar_btn_insertar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/label_guardar_cambios"
                    android:textAllCaps="false"
                    tools:targetApi="lollipop" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
